feat: add scan complete endpoint
